--- a/marketing.html
+++ b/marketing.html
@@ -11,58 +11,70 @@
     </style>
 </head>
 <body>
-    <h3>COSA INTENDIAMO PER COMUNICAZIONI MARKETING</h3>
-    <p>Le comunicazioni marketing comprendono messaggi promozionali, offerte speciali, aggiornamenti sui prodotti, newsletter e altre informazioni commerciali che ti inviamo per tenerti informato sui nostri servizi e offerte.</p>
+    <p>SmartChef si impegna a proteggere la tua privacy. Questa informativa sulla privacy descrive come raccogliamo, utilizziamo, condividiamo e proteggiamo le tue informazioni personali quando utilizzi la nostra applicazione.</p>
 
-    <h3>TIPI DI COMUNICAZIONI MARKETING</h3>
-    <p>Possiamo inviarti comunicazioni marketing tramite:</p>
+    <h3>INFORMAZIONI CHE RACCOGLIAMO</h3>
+    <p>Raccogliamo le seguenti informazioni:</p>
     <ul>
-        <li>Email</li>
-        <li>Notifiche push nell'app</li>
-        <li>SMS (se hai fornito il tuo numero di telefono)</li>
-        <li>Post sui social media</li>
+        <li>Informazioni personali: nome, cognome, indirizzo email, data di nascita, genere</li>
+        <li>Informazioni sull'account: credenziali di accesso, preferenze</li>
+        <li>Informazioni sull'utilizzo: ricette salvate, cronologia di ricerca, interazioni con l'app</li>
+        <li>Dati del dispositivo: tipo di dispositivo, sistema operativo, identificatori unici</li>
     </ul>
 
-    <h3>CONTENUTO DELLE COMUNICAZIONI</h3>
-    <p>Le nostre comunicazioni marketing possono includere:</p>
+    <h3>COME UTILIZZIAMO LE TUE INFORMAZIONI</h3>
+    <p>Utilizziamo le tue informazioni per:</p>
     <ul>
-        <li>Nuove ricette e contenuti aggiunti all'app</li>
-        <li>Offerte speciali e promozioni</li>
-        <li>Suggerimenti e consigli culinari</li>
-        <li>Aggiornamenti sulle funzionalità dell'app</li>
-        <li>Sondaggi sulla tua esperienza</li>
-        <li>Notizie sul mondo della cucina</li>
+        <li>Fornire e migliorare i nostri servizi</li>
+        <li>Personalizzare la tua esperienza all'interno dell'app</li>
+        <li>Comunicare con te riguardo aggiornamenti o promozioni</li>
+        <li>Analizzare come utilizzi la nostra app per migliorarla</li>
+        <li>Rispettare i nostri obblighi legali</li>
     </ul>
 
-    <h3>BASE LEGALE</h3>
-    <p>Inviamo comunicazioni marketing sulla base del tuo consenso esplicito, che puoi revocare in qualsiasi momento.</p>
-
-    <h3>COME ISCRIVERSI</h3>
-    <p>Puoi scegliere di ricevere le nostre comunicazioni marketing:</p>
+    <h3>CONDIVISIONE DELLE INFORMAZIONI</h3>
+    <p>Possiamo condividere le tue informazioni con:</p>
     <ul>
-        <li>Durante la registrazione all'app</li>
-        <li>Dalle impostazioni del tuo account</li>
-        <li>Tramite moduli di iscrizione all'interno dell'app</li>
+        <li>Fornitori di servizi che ci aiutano a gestire l'app</li>
+        <li>Partner commerciali, con il tuo consenso</li>
+        <li>Autorità competenti, quando richiesto dalla legge</li>
+        <li>In caso di fusione, vendita o trasferimento di attività</li>
+    </ul>
+    
+    <p>Non vendiamo mai le tue informazioni personali a terze parti.</p>
+
+    <h3>COOKIES E TECNOLOGIE SIMILI</h3>
+    <p>SmartChef utilizza cookies e tecnologie simili per fornire, proteggere e migliorare la nostra app. I cookies sono piccoli file di testo memorizzati sul tuo dispositivo.</p>
+
+    <h3>TIPI DI COOKIES UTILIZZATI</h3>
+    <ul>
+        <li>Cookies essenziali: necessari per il funzionamento dell'app</li>
+        <li>Cookies analitici: ci aiutano a capire come interagisci con l'app</li>
+        <li>Cookies funzionali: ricordano le tue preferenze e personalizzazioni</li>
+        <li>Cookies di marketing: utilizzati per scopi pubblicitari (solo con il tuo consenso)</li>
     </ul>
 
-    <h3>COME ANNULLARE L'ISCRIZIONE</h3>
-    <p>Puoi annullare l'iscrizione alle nostre comunicazioni marketing in qualsiasi momento:</p>
+    <h3>COME GESTIRE I COOKIES</h3>
+    <p>Puoi gestire le tue preferenze sui cookies attraverso le impostazioni del tuo dispositivo o browser. Tuttavia, la disabilitazione di alcuni cookies potrebbe influire sulla tua esperienza d'uso dell'app.</p>
+
+    <h3>I TUOI DIRITTI</h3>
+    <p>Hai il diritto di:</p>
     <ul>
-        <li>Cliccando sul link "Annulla iscrizione" presente in ogni email</li>
-        <li>Modificando le tue preferenze nelle impostazioni del tuo account</li>
-        <li>Contattando il nostro servizio clienti</li>
+        <li>Accedere alle tue informazioni personali</li>
+        <li>Correggere informazioni inesatte</li>
+        <li>Richiedere la cancellazione dei tuoi dati</li>
+        <li>Opporti al trattamento dei tuoi dati</li>
+        <li>Richiedere la limitazione del trattamento</li>
+        <li>Ricevere i tuoi dati in un formato leggibile</li>
     </ul>
 
-    <h3>FREQUENZA DELLE COMUNICAZIONI</h3>
-    <p>Ci impegniamo a rispettare la tua casella di posta e a non inviarti un numero eccessivo di comunicazioni. In generale, non invieremo più di una comunicazione a settimana, a meno che non ci siano offerte speciali o eventi particolari.</p>
+    <h3>SICUREZZA DEI DATI</h3>
+    <p>Adottiamo misure di sicurezza appropriate per proteggere le tue informazioni personali da accessi non autorizzati, alterazioni, divulgazioni o distruzioni.</p>
 
-    <h3>MARKETING DI TERZE PARTI</h3>
-    <p>Non vendiamo né condividiamo i tuoi dati con terze parti per scopi di marketing diretto senza il tuo consenso esplicito.</p>
-
-    <h3>MODIFICHE ALLA POLITICA DI MARKETING</h3>
-    <p>Ci riserviamo il diritto di modificare questa politica di marketing in qualsiasi momento. Le modifiche entreranno in vigore dopo la pubblicazione nell'app.</p>
+    <h3>MODIFICHE ALLA POLITICA SULLA PRIVACY</h3>
+    <p>Ci riserviamo il diritto di modificare questa politica sulla privacy in qualsiasi momento. Le modifiche entreranno in vigore dopo la pubblicazione nell'app.</p>
 
     <h3>CONTATTI</h3>
-    <p>Per domande riguardanti le nostre comunicazioni marketing, contattaci all'indirizzo email marketing@smartchef.com.</p>
+    <p>Per domande riguardanti la nostra politica sulla privacy, contattaci all'indirizzo email privacy@smartchef.com.</p>
 </body>
 </html>
