--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -11,58 +11,40 @@
     </style>
 </head>
 <body>
-    <h3>COSA INTENDIAMO PER COMUNICAZIONI MARKETING</h3>
-    <p>Le comunicazioni marketing comprendono messaggi promozionali, offerte speciali, aggiornamenti sui prodotti, newsletter e altre informazioni commerciali che ti inviamo per tenerti informato sui nostri servizi e offerte.</p>
+    <p>Benvenuto in SmartChef! Utilizzando la nostra app, accetti i seguenti termini e condizioni di utilizzo.</p>
 
-    <h3>TIPI DI COMUNICAZIONI MARKETING</h3>
-    <p>Possiamo inviarti comunicazioni marketing tramite:</p>
+    <h3>ACCETTAZIONE DEI TERMINI</h3>
+    <p>Utilizzando l'app SmartChef, accetti di essere vincolato dai presenti Termini e Condizioni. Se non accetti questi termini, ti preghiamo di non utilizzare l'app.</p>
+
+    <h3>LICENZA D'USO</h3>
+    <p>Ti concediamo una licenza limitata, non esclusiva e non trasferibile per accedere e utilizzare l'app SmartChef per uso personale e non commerciale.</p>
+
+    <h3>RESTRIZIONI D'USO</h3>
+    <p>Accetti di non:</p>
     <ul>
-        <li>Email</li>
-        <li>Notifiche push nell'app</li>
-        <li>SMS (se hai fornito il tuo numero di telefono)</li>
-        <li>Post sui social media</li>
+        <li>Copiare, modificare o creare opere derivate dall'app</li>
+        <li>Tentare di decompilare, disassemblare o hackerare l'app</li>
+        <li>Utilizzare l'app per scopi illegali o non autorizzati</li>
+        <li>Violare i diritti di proprietà intellettuale di altri</li>
+        <li>Utilizzare l'app in modo da danneggiare, disabilitare o sovraccaricare i nostri server</li>
     </ul>
 
-    <h3>CONTENUTO DELLE COMUNICAZIONI</h3>
-    <p>Le nostre comunicazioni marketing possono includere:</p>
-    <ul>
-        <li>Nuove ricette e contenuti aggiunti all'app</li>
-        <li>Offerte speciali e promozioni</li>
-        <li>Suggerimenti e consigli culinari</li>
-        <li>Aggiornamenti sulle funzionalità dell'app</li>
-        <li>Sondaggi sulla tua esperienza</li>
-        <li>Notizie sul mondo della cucina</li>
-    </ul>
+    <h3>CONTENUTI DEGLI UTENTI</h3>
+    <p>Potresti avere la possibilità di pubblicare ricette, commenti o altri contenuti nell'app. Mantieni la proprietà di questi contenuti, ma ci concedi una licenza mondiale, non esclusiva, royalty-free per utilizzare, riprodurre, modificare, adattare, pubblicare, tradurre, distribuire e mostrare tali contenuti.</p>
 
-    <h3>BASE LEGALE</h3>
-    <p>Inviamo comunicazioni marketing sulla base del tuo consenso esplicito, che puoi revocare in qualsiasi momento.</p>
+    <h3>ACCOUNT</h3>
+    <p>Sei responsabile di mantenere la riservatezza delle credenziali del tuo account e di tutte le attività che si verificano sul tuo account. Ci riserviamo il diritto di chiudere il tuo account in qualsiasi momento a nostra esclusiva discrezione.</p>
 
-    <h3>COME ISCRIVERSI</h3>
-    <p>Puoi scegliere di ricevere le nostre comunicazioni marketing:</p>
-    <ul>
-        <li>Durante la registrazione all'app</li>
-        <li>Dalle impostazioni del tuo account</li>
-        <li>Tramite moduli di iscrizione all'interno dell'app</li>
-    </ul>
+    <h3>LIMITAZIONE DI RESPONSABILITÀ</h3>
+    <p>L'app è fornita "così com'è" senza garanzie di alcun tipo. Non saremo responsabili per danni diretti, indiretti, incidentali, speciali, consequenziali o punitivi derivanti dall'uso dell'app.</p>
 
-    <h3>COME ANNULLARE L'ISCRIZIONE</h3>
-    <p>Puoi annullare l'iscrizione alle nostre comunicazioni marketing in qualsiasi momento:</p>
-    <ul>
-        <li>Cliccando sul link "Annulla iscrizione" presente in ogni email</li>
-        <li>Modificando le tue preferenze nelle impostazioni del tuo account</li>
-        <li>Contattando il nostro servizio clienti</li>
-    </ul>
+    <h3>MODIFICHE AI TERMINI</h3>
+    <p>Ci riserviamo il diritto di modificare questi termini in qualsiasi momento. Le modifiche entreranno in vigore dopo la pubblicazione nell'app. È tua responsabilità rivedere periodicamente questi termini.</p>
 
-    <h3>FREQUENZA DELLE COMUNICAZIONI</h3>
-    <p>Ci impegniamo a rispettare la tua casella di posta e a non inviarti un numero eccessivo di comunicazioni. In generale, non invieremo più di una comunicazione a settimana, a meno che non ci siano offerte speciali o eventi particolari.</p>
-
-    <h3>MARKETING DI TERZE PARTI</h3>
-    <p>Non vendiamo né condividiamo i tuoi dati con terze parti per scopi di marketing diretto senza il tuo consenso esplicito.</p>
-
-    <h3>MODIFICHE ALLA POLITICA DI MARKETING</h3>
-    <p>Ci riserviamo il diritto di modificare questa politica di marketing in qualsiasi momento. Le modifiche entreranno in vigore dopo la pubblicazione nell'app.</p>
+    <h3>LEGGE APPLICABILE</h3>
+    <p>Questi termini sono regolati dalle leggi italiane, senza riguardo ai principi di conflitto di leggi.</p>
 
     <h3>CONTATTI</h3>
-    <p>Per domande riguardanti le nostre comunicazioni marketing, contattaci all'indirizzo email marketing@smartchef.com.</p>
+    <p>Per domande riguardanti questi Termini e Condizioni, contattaci all'indirizzo email support@smartchef.com.</p>
 </body>
 </html>
