--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <p>provSmartChef si impegna a proteggere la tua privacy. Questa informativa sulla privacy descrive come raccogliamo, utilizziamo, condividiamo e proteggiamo le tue informazioni personali quando utilizzi la nostra applicazione.</p>
+    <p>SmartChef si impegna a proteggere la tua privacy. Questa informativa sulla privacy descrive come raccogliamo, utilizziamo, condividiamo e proteggiamo le tue informazioni personali quando utilizzi la nostra applicazione.</p>
 
     <h3>INFORMAZIONI CHE RACCOGLIAMO</h3>
     <p>Raccogliamo le seguenti informazioni:</p>
